# backend/internal/delivery/http/models/report_turn_over_by_month.go
@@ -1,0 +1,56 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// ReportTurnOverByMonth report turn over by month
+//
+// swagger:model ReportTurnOverByMonth
+type ReportTurnOverByMonth struct {
+
+	// income
+	Income float64 `json:"income"`
+
+	// outgo
+	Outgo float64 `json:"outgo"`
+
+	// sum
+	Sum float64 `json:"sum"`
+}
+
+// Validate validates this report turn over by month
+func (m *ReportTurnOverByMonth) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this report turn over by month based on context it is used
+func (m *ReportTurnOverByMonth) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *ReportTurnOverByMonth) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *ReportTurnOverByMonth) UnmarshalBinary(b []byte) error {
+	var res ReportTurnOverByMonth
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
